Appveyor: Install GNU Radio into the system
It will then be much easier to create an installer.

Signed-off-by: Paul Cercueil <paul.cercueil@analog.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,6 +58,7 @@ build_script:
         ..
 
     - msbuild /m /p:Configuration=Release /p:Platform="x64" gnuradio.sln
+    - msbuild /m /p:Configuration=Release /p:Platform="x64" /target:INSTALL gnuradio.sln
 
     # Prepare an archive
     - mkdir c:\gnuradio\lib\
