--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,43 +57,42 @@ build_script:
         -DSWIG_EXECUTABLE:FILEPATH=c:/swigwin-3.0.8/swig.exe \
         ..
 
-    - msbuild /m /p:Configuration=Release /p:Platform="x64" gnuradio.sln
-    - msbuild /m /p:Configuration=Release /p:Platform="x64" /target:INSTALL gnuradio.sln
+    - cmake --build . --config Release --target INSTALL
 
     # Prepare an archive
-    - mkdir c:\gnuradio\lib\
-    - mkdir c:\gnuradio\bin\
+#    - mkdir c:\gnuradio\lib\
+#    - mkdir c:\gnuradio\bin\
 
     # Copy GNU Radio libraries
-    - copy gnuradio-runtime\lib\Release\gnuradio-runtime.* c:\gnuradio\lib\
-    - copy gnuradio-runtime\lib\pmt\Release\gnuradio-pmt.* c:\gnuradio\lib\
-    - copy gr-audio\lib\Release\gnuradio-audio.* c:\gnuradio\lib\
-    - copy gr-blocks\lib\Release\gnuradio-blocks.* c:\gnuradio\lib\
-    - copy gr-ctrlport\lib\Release\gnuradio-ctrlport.* c:\gnuradio\lib\
-    - copy gr-fcd\lib\Release\gnuradio-fcd.* c:\gnuradio\lib\
-    - copy gr-fec\lib\Release\gnuradio-fec.* c:\gnuradio\lib\
-    - copy gr-noaa\lib\Release\gnuradio-noaa.* c:\gnuradio\lib\
-    - copy gr-fft\lib\Release\gnuradio-fft.* c:\gnuradio\lib\
-    - copy gr-filter\lib\Release\gnuradio-filter.* c:\gnuradio\lib\
-    - copy gr-analog\lib\Release\gnuradio-analog.* c:\gnuradio\lib\
-    - copy gr-digital\lib\Release\gnuradio-digital.* c:\gnuradio\lib\
-    - copy gr-channels\lib\Release\gnuradio-channels.* c:\gnuradio\lib\
-    - copy gr-pager\lib\Release\gnuradio-pager.* c:\gnuradio\lib\
-    - copy gr-trellis\lib\Release\gnuradio-trellis.* c:\gnuradio\lib\
-    - copy gr-utils\lib\Release\gnuradio-utils.* c:\gnuradio\lib\
+#    - copy gnuradio-runtime\lib\Release\gnuradio-runtime.* c:\gnuradio\lib\
+#    - copy gnuradio-runtime\lib\pmt\Release\gnuradio-pmt.* c:\gnuradio\lib\
+#    - copy gr-audio\lib\Release\gnuradio-audio.* c:\gnuradio\lib\
+#    - copy gr-blocks\lib\Release\gnuradio-blocks.* c:\gnuradio\lib\
+#    - copy gr-ctrlport\lib\Release\gnuradio-ctrlport.* c:\gnuradio\lib\
+#    - copy gr-fcd\lib\Release\gnuradio-fcd.* c:\gnuradio\lib\
+#    - copy gr-fec\lib\Release\gnuradio-fec.* c:\gnuradio\lib\
+#    - copy gr-noaa\lib\Release\gnuradio-noaa.* c:\gnuradio\lib\
+#    - copy gr-fft\lib\Release\gnuradio-fft.* c:\gnuradio\lib\
+#    - copy gr-filter\lib\Release\gnuradio-filter.* c:\gnuradio\lib\
+#    - copy gr-analog\lib\Release\gnuradio-analog.* c:\gnuradio\lib\
+#    - copy gr-digital\lib\Release\gnuradio-digital.* c:\gnuradio\lib\
+#    - copy gr-channels\lib\Release\gnuradio-channels.* c:\gnuradio\lib\
+#    - copy gr-pager\lib\Release\gnuradio-pager.* c:\gnuradio\lib\
+#    - copy gr-trellis\lib\Release\gnuradio-trellis.* c:\gnuradio\lib\
+#    - copy gr-utils\lib\Release\gnuradio-utils.* c:\gnuradio\lib\
 
-    - move c:\gnuradio\lib\*.dll c:\gnuradio\bin\
-    - copy c:\boost_chrono-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_chrono-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_filesystem-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_filesystem-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_program_options-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_program_options-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_system-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_system-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_date_time-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_date_time-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_thread-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_thread-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_regex-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_regex-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\boost_unit_test_framework-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_unit_test_framework-vc120-mt-1_59.dll c:\gnuradio\bin\
-    - copy c:\fftw3\libfftw3f-3.dll c:\gnuradio\bin\
+#    - move c:\gnuradio\lib\*.dll c:\gnuradio\bin\
+#    - copy c:\boost_chrono-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_chrono-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_filesystem-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_filesystem-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_program_options-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_program_options-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_system-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_system-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_date_time-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_date_time-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_thread-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_thread-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_regex-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_regex-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\boost_unit_test_framework-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_unit_test_framework-vc120-mt-1_59.dll c:\gnuradio\bin\
+#    - copy c:\fftw3\libfftw3f-3.dll c:\gnuradio\bin\
 
     # Create an archive
-    - cd c:\
+    - cd "c:\Program Files"
     - 7z a "c:\gnuradio-x64.zip" gnuradio
     - appveyor PushArtifact c:\gnuradio-x64.zip
