--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,7 @@
 clone_depth: 1
 
-nuget:
-    account_feed: true
-    project_feed: true
-
 install:
     - cd c:\
-
-    # Install VOLK
-    - nuget install volk
 
     # Install Boost libraries
     - appveyor-retry nuget install boost_system-vc120
@@ -22,7 +15,12 @@ install:
 
     # Install SWIG
     - appveyor DownloadFile https://sourceforge.net/projects/swig/files/swigwin/swigwin-3.0.8/swigwin-3.0.8.zip
-    - 7z x swigwin-3.0.8.zip
+    - 7z x swigwin-3.0.8.zip > nul
+
+    # Install libvolk
+    - cd "c:\Program Files"
+    - appveyor DownloadFile https://ci.appveyor.com/api/projects/analogdevicesinc/volk/artifacts/libvolk-x64.zip
+    - 7z x libvolk-x64.zip > nul
 
     # Install libfftw3
     - mkdir c:\fftw3
@@ -49,8 +47,8 @@ build_script:
         -DBoost_UNIT_TEST_FRAMEWORK_LIBRARY_RELEASE:FILEPATH=c:/boost_unit_test_framework-vc120.1.59.0.0/lib/native/address-model-64/lib/boost_unit_test_framework-vc120-mt-1_59.lib \
         -DBoost_INCLUDE_DIR:PATH=c:/boost.1.59.0.0/lib/native/include \
         -DCMAKE_BUILD_TYPE:STRING=Release -DENABLE_INTERNAL_VOLK:BOOL=OFF \
-        -DVOLK_INCLUDE_DIRS:PATH=c:/volk.1.0.0/include \
-        -DVOLK_LIBRARIES:FILEPATH=c:/volk.1.0.0/lib/volk.lib \
+        -DVOLK_INCLUDE_DIRS:PATH="c:/Program Files/volk/include" \
+        -DVOLK_LIBRARIES:FILEPATH="c:/Program Files/volk/lib/volk.lib" \
         -DFFTW3F_INCLUDE_DIRS:PATH=c:/fftw3 \
         -DFFTW3F_LIBRARIES:PATH=c:/fftw3/libfftw3f-3.lib \
         -DENABLE_GR_VOCODER:BOOL=OFF \
@@ -58,39 +56,6 @@ build_script:
         ..
 
     - cmake --build . --config Release --target INSTALL
-
-    # Prepare an archive
-#    - mkdir c:\gnuradio\lib\
-#    - mkdir c:\gnuradio\bin\
-
-    # Copy GNU Radio libraries
-#    - copy gnuradio-runtime\lib\Release\gnuradio-runtime.* c:\gnuradio\lib\
-#    - copy gnuradio-runtime\lib\pmt\Release\gnuradio-pmt.* c:\gnuradio\lib\
-#    - copy gr-audio\lib\Release\gnuradio-audio.* c:\gnuradio\lib\
-#    - copy gr-blocks\lib\Release\gnuradio-blocks.* c:\gnuradio\lib\
-#    - copy gr-ctrlport\lib\Release\gnuradio-ctrlport.* c:\gnuradio\lib\
-#    - copy gr-fcd\lib\Release\gnuradio-fcd.* c:\gnuradio\lib\
-#    - copy gr-fec\lib\Release\gnuradio-fec.* c:\gnuradio\lib\
-#    - copy gr-noaa\lib\Release\gnuradio-noaa.* c:\gnuradio\lib\
-#    - copy gr-fft\lib\Release\gnuradio-fft.* c:\gnuradio\lib\
-#    - copy gr-filter\lib\Release\gnuradio-filter.* c:\gnuradio\lib\
-#    - copy gr-analog\lib\Release\gnuradio-analog.* c:\gnuradio\lib\
-#    - copy gr-digital\lib\Release\gnuradio-digital.* c:\gnuradio\lib\
-#    - copy gr-channels\lib\Release\gnuradio-channels.* c:\gnuradio\lib\
-#    - copy gr-pager\lib\Release\gnuradio-pager.* c:\gnuradio\lib\
-#    - copy gr-trellis\lib\Release\gnuradio-trellis.* c:\gnuradio\lib\
-#    - copy gr-utils\lib\Release\gnuradio-utils.* c:\gnuradio\lib\
-
-#    - move c:\gnuradio\lib\*.dll c:\gnuradio\bin\
-#    - copy c:\boost_chrono-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_chrono-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_filesystem-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_filesystem-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_program_options-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_program_options-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_system-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_system-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_date_time-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_date_time-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_thread-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_thread-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_regex-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_regex-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\boost_unit_test_framework-vc120.1.59.0.0\lib\native\address-model-64\lib\boost_unit_test_framework-vc120-mt-1_59.dll c:\gnuradio\bin\
-#    - copy c:\fftw3\libfftw3f-3.dll c:\gnuradio\bin\
 
     # Create an archive
     - cd "c:\Program Files"
