CMake: Generate GnuradioConfig.cmake with a hardcoded install path hint
This permits out-of-tree modules to properly find the headers and
libraries of GNU Radio when GNU Radio was built with a prefix that
differs from the expected paths.

Signed-off-by: Paul Cercueil <paul.cercueil@analog.com>

--- a/cmake/Modules/GnuradioConfig.cmake.in
+++ b/cmake/Modules/GnuradioConfig.cmake.in
@@ -72,6 +72,7 @@ function(GR_MODULE EXTVAR PCNAME INCFILE LIBFILE)
             ${CMAKE_INSTALL_PREFIX}/include
         PATHS /usr/local/include
               /usr/include
+              "@CMAKE_INSTALL_PREFIX@/include"
     )
 
     # look for libs
@@ -87,6 +88,7 @@ function(GR_MODULE EXTVAR PCNAME INCFILE LIBFILE)
                   /usr/local/lib64
                   /usr/lib
                   /usr/lib64
+                  "@CMAKE_INSTALL_PREFIX@/lib"
         )
 	list(APPEND ${LIBVAR_NAME} ${${LIBVAR_NAME}_${libname}})
     endforeach(libname)
