--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,6 +40,8 @@ build_script:
     # Without this directory in the %PATH%, compiler tests fail because of missing DLLs
     - set PATH=%PATH%;C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\bin
     - cmake -G "Visual Studio 12 Win64" \
+        -DBoost_MULTITHREADED:BOOL=TRUE \
+        -DBoost_USE_STATIC_LIBS:BOOL=FALSE \
         -DBoost_ATOMIC_LIBRARY_RELEASE:FILEPATH=c:/boost_atomic-vc120.1.61.0.0/lib/native/address-model-64/lib/boost_atomic-vc120-mt-1_61.lib \
         -DBoost_CHRONO_LIBRARY_RELEASE:FILEPATH=c:/boost_chrono-vc120.1.61.0.0/lib/native/address-model-64/lib/boost_chrono-vc120-mt-1_61.lib \
         -DBoost_FILESYSTEM_LIBRARY_RELEASE:FILEPATH=c:/boost_filesystem-vc120.1.61.0.0/lib/native/address-model-64/lib/boost_filesystem-vc120-mt-1_61.lib \
