--- a/gr-fft/lib/CMakeLists.txt
+++ b/gr-fft/lib/CMakeLists.txt
@@ -81,7 +81,8 @@ if(FFTW3F_THREADS_LIBRARIES)
     add_definitions("-DFFTW3F_THREADS")
 endif()
 
-add_library(gnuradio-fft SHARED ${fft_sources})
+set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries")
+add_library(gnuradio-fft ${fft_sources})
 target_link_libraries(gnuradio-fft ${fft_libs})
 GR_LIBRARY_FOO(gnuradio-fft RUNTIME_COMPONENT "fft_runtime" DEVEL_COMPONENT "fft_devel")
 
